--- a/index.html
+++ b/index.html
@@ -353,11 +353,17 @@
             </div> <!-- row -->
           
             <div class="row">
-                <div class="col-lg-9">
+                <div class="col-lg-6">
                     <div class="contact-form pt-30">
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSffWn1XGseAYqg3Jphb_3kbloFxWVoDoDg25bo1cwvH4ogMoQ/viewform?embedded=true" width="1100" height="850" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>      </div> <!-- contact form -->
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSffWn1XGseAYqg3Jphb_3kbloFxWVoDoDg25bo1cwvH4ogMoQ/viewform?embedded=true" width="500" height="780" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>      </div> <!-- contact form -->
                 </div>
-                
+                <div class="col-lg-6">
+                    <div class="contact-map mt-60">
+                        <div class="gmap_canvas">                            
+                            <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Mission%20District%2C%20San%20Francisco%2C%20CA%2C%20USA&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                        </div>
+                    </div> <!-- contact map -->
+                </div>
             </div> <!-- row -->
         </div> <!-- container -->
     </section>
