--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <h4 class="sub-title">Do You</h4>
                             <h3 class="title">Want to Become a Bank</h3>
                             <p>Increase your income  by becoming a Fino Bank banking partner</p>
-                            <a class="main-btn" href="#work">Free Inquiry</a>
+                            <a class="main-btn" href="#contact">Free Inquiry</a>
                         </div> <!-- header content right -->
                     </div>
                     <div class="col-lg-6 offset-xl-1">
