--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="contact-form pt-30">
-                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSffWn1XGseAYqg3Jphb_3kbloFxWVoDoDg25bo1cwvH4ogMoQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>      </div> <!-- contact form -->
+                        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSffWn1XGseAYqg3Jphb_3kbloFxWVoDoDg25bo1cwvH4ogMoQ/viewform?embedded=true" height=800 frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>      </div> <!-- contact form -->
                 </div>
                 <div class="col-lg-6">
                     <div class="contact-map mt-60">
