--- a/index.html
+++ b/index.html
@@ -122,15 +122,14 @@
                 <div class="row align-items-center">
                     <div class="col-xl-5 col-lg-6">
                         <div class="header-content-right">
-                            <h4 class="sub-title">Do You</h4>
-                            <h3 class="title">Hosting Payment</h3>
-                            <p>Is Pending......</p>
-                            <a class="main-btn" href="#contact">Free Inquiry</a>
+                            <h4 class="sub-title">Hosting Payment</h4>
+                            <h3 class="title">Is Pending......</h3>
+                             <a class="main-btn" href="#contact">Call 9913876568</a>
                         </div> <!-- header content right -->
                     </div>
                     <div class="col-lg-6 offset-xl-1">
                         <div class="header-image d-none d-lg-block">
-                            <img src="assets/images/banner/hero.png" alt="hero">
+                            <img src="assets/images/banner/hjyh.png" alt="hero">
                         </div> <!-- header image -->
                     </div>
                 </div> <!-- row -->
