--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
-                                <img src="assets/images/logo.png" alt="Logo">
+                                <img src="assets/images/logos.png" alt="Logo">
                             </a> <!-- Logo -->
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="toggler-icon"></span>
@@ -140,20 +140,7 @@
 
     <!--====== HEADER PART ENDS ======-->
 
-    <!--====== ABOUT PART START ======-->
-
-    <section id="about" class="about-area pt-125 pb-130">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <div class="section-title text-center">
-                        <h2 class="title">About</h2>
-                        <p>Hosting Payment is Pending.... Call 9913876568</p>
-                    </div> <!-- section title -->
-                </div>
-            </div> <!-- row -->
-           
-    </section>
+  
 
    
     <!--====== FOOTER PART ENDS ======-->
